# sorry-tracker

./: .gitignore  LICENSE  README.md  analysis.py  detection.py  github_issues.py  issues.py  lean_utils.py  llm_provider.py  pyproject.toml  references.py
tests/: test_analysis.py  test_detection.py  test_github_issues.py  test_issues.py  test_lean_utils.py  test_llm_provider.py
