[project]
name = "sorry-tracker"
version = "0.1.0"
description = "Automates creating detailed GitHub issues for Lean 'sorry' proofs using Gemini AI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.8.6",
]

[project.scripts]
sorry-tracker = "issues:main"

[tool.uv]
package = true
