[project]
name = "sorry-tracker"
version = "0.1.0"
description = "Automates creating detailed GitHub issues for Lean 'sorry' proofs using an LLM via OpenRouter."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai",
    "pydantic",
    "requests",
]

[project.scripts]
sorry-tracker = "issues:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat top-level modules (no src/ package dir); list them explicitly.
include = [
    "issues.py",
    "detection.py",
    "analysis.py",
    "references.py",
    "github_issues.py",
    "lean_utils.py",
    "llm_provider.py",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
# Run tests against the source tree at the repo root.
pythonpath = ["."]
